<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ExtraTranslation">
    <string name="app_name">CustomView</string>
    <string name="tag_tv_1">透明边框</string>
    <string name="tag_tv_2">填充背景</string>
    <string name="tag_tv_3">边框背景</string>
    <string name="color_group_bounce">←bounce</string>
    <string name="color_group_shrink">←shrink</string>
    <string name="timeline">时间轴</string>
    <string name="progress_start" >动画开始</string>
</resources>
