<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.ddancn.view.tag.TagTextView
        android:id="@+id/tag1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/tag_tv_1"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.ddancn.view.tag.TagTextView
        android:id="@+id/tag2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/tag_tv_2"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:backgroundColor="@color/colorPrimary"
        app:fillMode="fill"
        app:layout_constraintLeft_toRightOf="@id/tag1"
        app:layout_constraintTop_toTopOf="@id/tag1" />

    <com.ddancn.view.tag.TagTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/tag_tv_3"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:backgroundColor="@color/colorPrimary"
        app:borderColor="@color/colorPrimaryDark"
        app:fillMode="all"
        app:layout_constraintLeft_toRightOf="@id/tag2"
        app:layout_constraintTop_toTopOf="@id/tag2" />

    <com.ddancn.view.colorgroup.CircleColorGroup
        android:id="@+id/color_group_bounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:animType="bounce"
        app:column="5"
        app:itemMarginHorizontal="5dp"
        app:itemMarginVertical="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tag1"
        app:radius="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_group_bounce"
        app:layout_constraintBottom_toBottomOf="@id/color_group_bounce"
        app:layout_constraintLeft_toRightOf="@id/color_group_bounce" />

    <com.ddancn.view.colorgroup.CircleColorGroup
        android:id="@+id/color_group_shrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:animType="shrink"
        app:column="5"
        app:itemMarginHorizontal="5dp"
        app:itemMarginVertical="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/color_group_bounce"
        app:radius="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_group_shrink"
        app:layout_constraintBottom_toBottomOf="@id/color_group_shrink"
        app:layout_constraintLeft_toRightOf="@id/color_group_shrink" />
</androidx.constraintlayout.widget.ConstraintLayout>